--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,26 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+####### VUE #######
+
+.DS_Store
+node_modules
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
